--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -95,6 +95,7 @@ amount of direct configuration by the user.\\
 \includegraphics[scale=0.6]{UMLClassDiagram.pdf}\\
 \end{center}
 \newpage
+%% Jim's WA6
 When we approach a large project, we must keep the entire design in mind all the time. Because Conferenceware is a project of considerable size and complexity, we need to keep conventions and separation consistent throughout the development process. Otherwise, we can not keep it 
 in a manageable state. We strive to maintain cohesion when dealing with issues as course-grained as file management and as specific as module management or the content of the classes.  Our concern for consistent design extends to all aspects of the project.
 
