--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -88,11 +88,31 @@ amount of direct configuration by the user.\\
 %% Oh god, importing pdfs
 \part{Architecture and Design}
 \begin{center}
-\includegraphics[scale=0.8]{AddEvent_sequence.pdf}\\
-\includegraphics[scale=0.8]{ManageEvent_sequence.pdf}\\
-\includegraphics[scale=0.8]{RegisterAttendee_sequence.pdf}\\
-\includegraphics[scale=0.8]{TShirtSizeCreate_sequence.pdf}\\
-\includegraphics[scale=0.6]{UMLClassDiagram.pdf}\\
+    \begin{figure}
+        \includegraphics[width=\textwidth]{AddEvent_sequence.pdf}
+        \caption{AddEvent Sequence Diagram}
+        \label{fig:AddEvent Class}
+    \end{figure}
+    \begin{figure}
+        \includegraphics[width=\textwidth]{ManageEvent_sequence.pdf}
+        \caption{Manage Event Sequence Diagram}
+        \label{fig:ManageEvent Class}
+    \end{figure}
+    \begin{figure}
+        \includegraphics[width=\textwidth]{RegisterAttendee_sequence.pdf}
+        \caption{Register Attendee Sequence Diagram}
+        \label{fig:Register Event Class}
+    \end{figure}
+    \begin{figure}
+        \includegraphics[width=\textwidth]{TShirtSizeCreate_sequence.pdf}
+        \caption{TShirtSizeCreate Sequence Diagram}
+        \label{fig:TShirtSizeCreate Class}
+    \end{figure}
+    \begin{figure}
+        \includegraphics[width=\textwidth]{UMLClassDiagram.pdf}
+        \caption{Class Diagram of Conferenceware}
+        \label{fig:UML Diagram of Conferenceware}
+    \end{figure}
 \end{center}
 \newpage
 %% Jim's WA6
